tests/ui/tests/lowering/misplaced-attributes.stderr
error[E013]: attribute `foreign` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:3:1
  |
3 | @foreign
  | ^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:5:1
  |
5 | use self.()
  | ----------- incompatible item
  |
 note: attribute `foreign` can only be ascribed to value or data declarations

error[E013]: attribute `foreign` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:4:1
  |
4 | @foreign @Int32
  | ^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:5:1
  |
5 | use self.()
  | ----------- incompatible item
  |
 note: attribute `foreign` can only be ascribed to value or data declarations

error[E013]: attribute `Int32` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:4:10
  |
4 | @foreign @Int32
  |          ^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:5:1
  |
5 | use self.()
  | ----------- incompatible item
  |
 note: attribute `Int32` can only be ascribed to number literals

error[E013]: attribute `foreign` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:7:1
  |
7 | @foreign @opaque @(location "/")
  | ^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:8:1
  |
8 | use something.substantial.(root0 root1)
  | --------------------------------------- incompatible item
  |
 note: attribute `foreign` can only be ascribed to value or data declarations

error[E013]: attribute `opaque` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:7:10
  |
7 | @foreign @opaque @(location "/")
  |          ^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:8:1
  |
8 | use something.substantial.(root0 root1)
  | --------------------------------------- incompatible item
  |
 note: attribute `opaque` can only be ascribed to data declarations

error[E013]: attribute `location` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:7:18
  |
7 | @foreign @opaque @(location "/")
  |                  ^^^^^^^^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:8:1
  |
8 | use something.substantial.(root0 root1)
  | --------------------------------------- incompatible item
  |
 note: attribute `location` can only be ascribed to module declarations

error[E013]: attribute `include` is ascribed to a value declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:10:1
   |
10 | @include
   | ^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:11:1
   |
11 |   binding: Binding =
   |  _-
12 | |     @foreign @Text make-binding @(public super) resource
   | |________________________________________________________- incompatible item
   |
  note: attribute `include` can only be ascribed to text literals

error[E013]: attribute `foreign` is ascribed to a path expression
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:5
   |
12 |     @foreign @Text make-binding @(public super) resource
   |     ^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:20
   |
12 |     @foreign @Text make-binding @(public super) resource
   |                    ------------ incompatible item
   |
  note: attribute `foreign` can only be ascribed to value or data declarations

error[E013]: attribute `Text` is ascribed to a path expression
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:14
   |
12 |     @foreign @Text make-binding @(public super) resource
   |              ^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:20
   |
12 |     @foreign @Text make-binding @(public super) resource
   |                    ------------ incompatible item
   |
  note: attribute `Text` can only be ascribed to text literals

error[E013]: attribute `public` is ascribed to a path expression
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:33
   |
12 |     @foreign @Text make-binding @(public super) resource
   |                                 ^^^^^^^^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:49
   |
12 |     @foreign @Text make-binding @(public super) resource
   |                                                 -------- incompatible item
   |
  note: attribute `public` can only be ascribed to declarations except constructors

error[E013]: attribute `public` is ascribed to a constructor declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:15:5
   |
15 |     @public manifest
   |     ^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:15:13
   |
15 |     @public manifest
   |             -------- incompatible item
   |
  note: attribute `public` can only be ascribed to declarations except constructors

error[E015]: missing mandatory type annotation on declaration `manifest`
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:15:21
   |
15 |     @public manifest
   |                    >< 
   |
  help: provide a type annotation for the declaration with `: ?type`

error[E013]: attribute `static` is ascribed to a path pattern
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:19:9
   |
19 |         @static box => it
   |         ^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:19:17
   |
19 |         @static box => it
   |                 --- incompatible item
   |
  note: attribute `static` can only be ascribed to expressions

error: aborting due to 13 previous errors
 note: the errors E013 and E015 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

